@@ -1,3 +1,8 @@
+2012-03-27  Eric Botcazou  <ebotcazou@adacore.com>
+
+	* expmed.c (store_bit_field): Assert that BITREGION_START is a multiple
+	of a unit before computing the offset in units.
+
 2012-03-27  Richard Guenther  <rguenther@suse.de>
 
 	PR middle-end/52720
